2001-11-11  Glynn Foster  <glynn.foster@sun.com>

	Add news item to main page and fix links.

	* electionrules.html:
	* elections.html:
	* index.html:
	* overview.html:

2001-11-11  Glynn Foster  <glynn.foster@sun.com>

	Adding list of candidates for the Foundation Board 
	elections 2001.

	* ballot-summary-2000.html:
	* ballot-summary.html:
	* election-2000.html:
	* electionrules.html:
	* elections.html:
	* overview.html:

2001-11-08  Dan Mueth  <d-mueth@uchicago.edu>

	Integrating overview.html into the the web site, since it was
	left out during my integration work last week.

	* election-2000.html:
	* electionrules.html:
	* elections.html:
	* overview.html:

2001-11-04  Dan Mueth  <d-mueth@uchicago.edu>

	Fixed a few typos and updated the maintainer line.

	* advisory_board.html:
	* board_of_directors.html:
	* charter.html:
	* directory.html:
	* documentation.html:
	* election-2000.html:
	* electionrules.html:
	* elections.html:
	* executive_director.html:
	* faq-ln7.html:
	* faq.html:
	* index.html:
	* membership-form.html:
	* membership-policy.html:
	* membership.html:
	* organization.html:
	* template.html:

2001-11-04  Dan Mueth  <d-mueth@uchicago.edu>

	Adding organization section for the web page.

	* advisory_board.html:
	* board_of_directors.html:
	* charter.html:
	* directory.html:
	* documentation.html:
	* election-2000.html:
	* electionrules.html:
	* elections.html:
	* executive_director.html:
	* faq.html:
	* index.html:
	* membership-form.html:
	* membership-policy.html:
	* membership.html:
	* organization.html:
	* template.html:

2001-11-03  Dan Mueth  <d-mueth@uchicago.edu>

	Created documentation section for the web page.

	* charter.html:
	* faq.html:
	* index.html:

2001-11-03  Dan Mueth  <d-mueth@uchicago.edu>

	Cleaning up organization of election materials.

	* election-2000.html:
	* electionrules.html:
	* elections.html:
	* index.html:
	* template.html:

2001-11-03  Dan Mueth  <d-mueth@uchicago.edu>
