@@ -82,7 +82,7 @@ year and I am used to non-profit organizations and the negotiation
 needed to reach consensus in a group. I will focus on the reuse
 of standards, internationalization and keeping trust relationship at an
 individual level. I think those are needed to keep hacking on Gnome fun
-and getting acceptance in new communities.
+and getting acceptance in new communities. Affiliation Red Hat.
 &quot;
 Full statement at <a href="http://mail.gnome.org/archives/foundation-announce/2001-November/msg00001.html">
 http://mail.gnome.org/archives/foundation-announce/2001-November/msg00001.html</a>
