@@ -1,5 +1,11 @@
 2001-11-11  Glynn Foster  <glynn.foster@sun.com>
 
+	Add Daniel's affiliation. Slipped through the gap.
+
+	* ballot-summary.html:
+
+2001-11-11  Glynn Foster  <glynn.foster@sun.com>
+
 	Add news item to main page and fix links.
 
 	* electionrules.html:
